--- a/ImmiCanada/Views/Home/Index.cshtml
+++ b/ImmiCanada/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<<div class="container">
+<div class="container-fluid">
     <div class="row pad-top40px">
         <div class="row col-sm-12">
             <div class="col-sm-3">
@@ -208,7 +208,7 @@
             </div>
         </div>
     </div>
-    <div class="row pad-top40px canada-deserve-to-life">
+    <div class="row pad-top40px canada-deserve-to-life document-handling-container">
         <div class="row col-sm-12 canada-deserve-to-life-title">
             <p>QUY TRÌNH</p>
             &nbsp; XỬ LÝ HỒ SƠ
@@ -222,7 +222,7 @@
                 Cung cấp dịch vụ nhập cư với sự hỗ trợ của các chuyên gia nhập cư tốt nhất. Chúng tôi hướng dẫn các ứng viên quan tâm lựa chọn các lựa chọn visa PR tốt nhất, đánh giá cơ hội xin visa,
                 hỗ trợ ứng viên trong các thủ tục xin visa và thủ tục PR.
             </div>
-            <div class="col-sm-10 offset-1 document-handling-section-detail">
+            <div class="col-sm-12 document-handling-section-detail">
                 <div class="row mar-bottom30px">
                     <div class="col-sm-4 row">
                         <div class="col-sm-3">
@@ -347,8 +347,8 @@
             </div>
         </div>
     </div>
-    <hr class="news-line-top" />
-    <div class="row section-news">
+    @*<hr class="news-line-top" />*@
+    <div class="row section-news pad-top40px">
         @*Link for Carousel multiple items : https://azmind.com/bootstrap-carousel-multiple-items/*@
         <div class="top-content">
             <div class="container-fluid">
