--- a/ImmiCanada/Views/Shared/_Layout.cshtml
+++ b/ImmiCanada/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0&appId=140057183061041&autoLogAppEvents=1" nonce="yRruhlDd"></script>
     <div class="full-width">
         <div class="row top-banner">
-            <div class="offset-2 col-sm-3">CHUYENVIENTUVANCANADA@GMAIL.COM</div>
+            <div class="offset-1 col-sm-3">CHUYENVIENTUVANCANADA@GMAIL.COM</div>
             <div class="col-sm-2">
                 <i class="fa fa-phone mar-right3px" aria-hidden="true"></i>090 191 4768
             </div>
@@ -29,17 +29,17 @@
         </div>
     </div>
     <div class="full-width main-header">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="offset-1 col-sm-2">
                     <img src="Content/images/logo.png" class="img-fluid main-logo" />
                 </div>
-                <div class="col-sm-10 slogan">
+                <div class="col-sm-9 slogan">
                     TẦM NHÌN CỦA BẠN, TƯƠNG LAI GIA ĐÌNH BẠN
                 </div>
             </div>
             <div class="row main-menu">
-                <div class="menu-item"><a href="#">TRANG CHỦ</a></div>
+                <div class="menu-item offset-1"><a href="#">TRANG CHỦ</a></div>
                 <div class="menu-item pos-rel">
                     <a href="#divCanadaDetails" for="divCanadaDetails" data-toggle="collapse"
                        aria-controls="divCanadaDetails" aria-expanded="false" class="collapsed">CANADA</a>
@@ -238,7 +238,7 @@
                 <div class="menu-item"><a href="#">ĐÁNH GIÁ MIỄN PHÍ</a></div>
             </div>
             <div class="row main-banner">
-                <div class="col-sm-6 pad-left65px">
+                <div class="col-sm-6 offset-1">
                     <div class="homepage-title-service">DỊCH VỤ</div>
                     <div class="homepage-title-settle">VIỆC LÀM, ĐẦU TƯ ĐỊNH CƯ</div>
                     <div class="homepage-title-canada">CANADA</div>
@@ -258,7 +258,7 @@
     <div>
         @RenderBody()
     </div>
-    <div class="container footer">
+    <div class="footer">
         <div class="row">
             <div class="col-sm-3">
                 <div class="col-sm-12 text-center">
@@ -292,10 +292,15 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-sm-12 text-center canada-visa-copy-right">
+            Bản quyền thuộc về Canada Visa - Việc làm đầu tư định cư Canada @{ WriteLiteral("@"); }2021
+        </div>
+    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/mainscript")
     @RenderSection("scripts", required: false)
 </body>
 </html>
