--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -230,13 +230,14 @@ body {
 }
 
 .card-highlight {
-    width: 18rem;
+    width: 26rem;
     min-height: 33rem;
     box-shadow: 5px 10px 18px #888888;
 }
 
     .card-highlight .card-img-top {
         min-height: 190px;
+        height: 270px !important;
     }
 
     .card-highlight .card-main-title {
@@ -475,14 +476,22 @@ body {
     margin-top: 50px;
 }
 
+    .outstanding-form .row,
+    .outstanding-form-violet .row,
+    .outstanding-form-orrange .row {
+        margin-bottom: 15px;
+    }
+
     .outstanding-form i {
-        font-size: 30px;
-        color: #0043ff;
+        font-size: 20px;
+        color: #96dbff;
+        margin-right: 5px;
     }
 
 .outstanding-form-footer {
     display: block;
     text-align: center;
+    margin-top: 30px;
 }
 
     .outstanding-form-footer input {
@@ -500,13 +509,15 @@ body {
 }
 
     .outstanding-form-violet i {
-        font-size: 30px;
-        color: #9c27b0;
+        font-size: 20px;
+        color: #96dbff;
+        margin-right: 5px;
     }
 
 .outstanding-form-violet-footer {
     display: block;
     text-align: center;
+    margin-top: 30px;
 }
 
 
@@ -525,13 +536,15 @@ body {
 }
 
     .outstanding-form-orrange i {
-        font-size: 30px;
-        color: #f44336;
+        font-size: 20px;
+        color: #96dbff;
+        margin-right: 5px;
     }
 
 .outstanding-form-orrange-footer {
     display: block;
     text-align: center;
+    margin-top: 30px;
 }
 
 
@@ -554,6 +567,7 @@ body {
     position: relative;
     z-index: 0;
     background-attachment: fixed;
+    min-height: 500px;
 }
 
     .document-handling:before {
