--- a/ImmiCanada/Views/Shared/_Layout.cshtml
+++ b/ImmiCanada/Views/Shared/_Layout.cshtml
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=1024, initial-scale=1.0">
+    @*<meta name="viewport" content="width=2000, initial-scale=1.0">*@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/Scripts/tinymce/tinymce.min.js");
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    @Scripts.Render("~/Scripts/tinymce/tinymce.min.js")
     <!-- Script to wire up your TinyMCE editor -->
-    <script type="text/javascript">
+    @*<script type="text/javascript">
         // Initialize your tinyMCE Editor with your preferred options
         tinyMCE.init({
             // General options
@@ -16,23 +17,23 @@
             theme: "modern",
             // Theme options
             theme_advanced_buttons1: "save,newdocument,|,bold,italic,underline,
-                  strikethrough,|, justifyleft, justifycenter, justifyright, justifyfull,|,
+                      strikethrough,|, justifyleft, justifycenter, justifyright, justifyfull,|,
             styleselect, formatselect, fontselect, fontsizeselect",
-                theme_advanced_buttons2: "cut,copy,paste,pastetext,pasteword,|,
-                  search, replace,|, bullist, numlist,|, outdent, indent, blockquote,|, undo, redo,|,
+                    theme_advanced_buttons2: "cut,copy,paste,pastetext,pasteword,|,
+                      search, replace,|, bullist, numlist,|, outdent, indent, blockquote,|, undo, redo,|,
             link, unlink, anchor, image, cleanup, help, code,|, insertdate, inserttime, preview,|,
             forecolor, backcolor",
-                theme_advanced_buttons3: "tablecontrols,|,hr,removeformat,visualaid,|,
-                  sub, sup,|, charmap, emotions, iespell, media, advhr,|, print,|, ltr, rtl,|, fullscreen",
-                theme_advanced_buttons4: "insertlayer,moveforward,movebackward,absolute,|,
-                 styleprops, spellchecker,|, cite, abbr, acronym, del, ins, attribs,|,
+                    theme_advanced_buttons3: "tablecontrols,|,hr,removeformat,visualaid,|,
+                      sub, sup,|, charmap, emotions, iespell, media, advhr,|, print,|, ltr, rtl,|, fullscreen",
+                    theme_advanced_buttons4: "insertlayer,moveforward,movebackward,absolute,|,
+                     styleprops, spellchecker,|, cite, abbr, acronym, del, ins, attribs,|,
             visualchars, nonbreaking, template, blockquote, pagebreak,|, insertfile, insertimage",
-                theme_advanced_toolbar_location: "top",
+                    theme_advanced_toolbar_location: "top",
             theme_advanced_toolbar_align: "left",
             theme_advanced_statusbar_location: "bottom",
             theme_advanced_resizing: true
-            });
-    </script>
+                });
+    </script>*@
 </head>
 <body>
     <div id="fb-root"></div>
@@ -285,7 +286,7 @@
     <div>
         @RenderBody()
     </div>
-    <div class="footer">
+    <div class="footer" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
         <div class="row">
             <div class="col-sm-3">
                 <div class="col-sm-12 text-center">
@@ -329,5 +330,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/mainscript")
     @RenderSection("scripts", required: false)
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </body>
 </html>
