--- a/ImmiCanada/Views/Home/Index.cshtml
+++ b/ImmiCanada/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 
                     <div class="card-body pos-rel">
                         <p class="card-title">Nhiều năm kinh nghiệm</p>
-                        <p class="card-text">
+                        <p class="card-text text-center">
                             Chúng tôi đã đại diện cho khách hàng của chúng tôi ở Việt Nam trong nhiều năm qua liên quan đến lĩnh vực di trú, đầu tư tại đất nước Canada.
                         </p>
                     </div>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="card-body pos-rel">
                         <p class="card-title">Hơn nhiều trường hợp nhập cư</p>
-                        <p class="card-text">
+                        <p class="card-text text-center"">
                             Chúng tôi đã thành công đại diện cho nhiều khách hàng Việt Nam nhập cư vào đất nước Canada.
                         </p>
                     </div>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="card-body pos-rel">
                         <p class="card-title">Đánh giá miễn phí</p>
-                        <p class="card-text">
+                        <p class="card-text text-center"">
                             Trước khi đại diện cho khách hàng của chúng tôi, chúng tôi cung cấp một quy trình đánh giá nhập cư Canada miễn phí.
                         </p>
                     </div>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="card-body pos-rel">
                         <p class="card-title">Chuyên gia xuất nhập cảnh</p>
-                        <p class="card-text">
+                        <p class="card-text text-center"">
                             Tất cả luật sư & tư vấn của chúng tôi chuyên về Luật Di Trú để đảm bảo trường hợp của bạn được giải quyết đúng đắn.
                         </p>
                     </div>
@@ -62,56 +62,56 @@
     </div>
     <div class="row pad-top40px canada-deserve-to-life">
         <div class="row col-sm-12 canada-deserve-to-life-title">
+            <img src="Content/images/left-bg.jpg" class="img-left-icon" />
             <p>CANADA</p>
             &nbsp; QUỐC GIA ĐÁNG SỐNG
         </div>
-        <hr class="hoz-line-fee" />
-        <div class="row col-sm-12">
+        @*<hr class="hoz-line-fee" />*@
+        <div class="row col-sm-12 text-justify">
             Đằng sau sự giàu có và thành công của một quốc gia là các chính sách tạo ra các khả năng, những thúc đẩy nỗ lực và lịch sử định hình môi trường và quan điểm.
-            <br />
             Bảng xếp hạng của một quốc gia đáng sống nhất được dựa trên một số đặc điểm và 9 phần quan trọng ngày đây tạo nên thứ hạng tổng thể, góp phần tạo nên quốc gia đáng sống
         </div>
         <div class="row">
-            <div class="col-sm-12 pad-top40px">
+            <div class="col-sm-12 canada-deserve-to-life-introduction">
                 <div class="row mar-bottom30px">
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-chatluongcuocsong" src="Content/images/chatluongcuocsong1.jpg" data-aos="flip-left"/>
+                        <img class="img-fluid full-width box-shadow-chatluongcuocsong" src="Content/images/chatluongcuocsong1.jpg" />
                         <p class="center-note">CHẤT LƯỢNG CUỘC SỐNG</p>
                     </div>
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-quyencongdan" src="Content/images/quyencongdan.png" data-aos="flip-left" />
+                        <img class="img-fluid full-width box-shadow-quyencongdan" src="Content/images/quyencongdan.png"  />
                         <p class="center-note">QUYỀN CÔNG DÂN</p>
                     </div>
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-quyenluc" src="Content/images/quyenluc.png" data-aos="flip-left"/>
+                        <img class="img-fluid full-width box-shadow-quyenluc" src="Content/images/quyenluc.png" />
                         <p class="center-note">QUYỀN LỰC</p>
                     </div>
                 </div>
                 <div class="row mar-bottom30px">
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-mochodoanhnghiep" src="Content/images/mochodoanhnghiep.jpg" data-aos="flip-left" />
+                        <img class="img-fluid full-width box-shadow-mochodoanhnghiep" src="Content/images/mochodoanhnghiep.jpg"  />
                         <p class="center-note">MỞ CHO DOANH NGHIỆP</p>
                     </div>
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-giaoduc" src="Content/images/giaoduc.jpg" data-aos="flip-left" />
+                        <img class="img-fluid full-width box-shadow-giaoduc" src="Content/images/giaoduc.jpg"  />
                         <p class="center-note">GIÁO DỤC</p>
                     </div>
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-nuoidayconcai" src="Content/images/nuoidayconcai.png" data-aos="flip-left" />
+                        <img class="img-fluid full-width box-shadow-nuoidayconcai" src="Content/images/nuoidayconcai.png"  />
                         <p class="center-note">NUÔI DẠY CON CÁI</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-minhbach" src="Content/images/minhbach.png" data-aos="flip-left" />
+                        <img class="img-fluid full-width box-shadow-minhbach" src="Content/images/minhbach.png"  />
                         <p class="center-note">MINH BẠCH</p>
                     </div>
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-trusochinhcuatongcongty" src="Content/images/trusochinhcuatongcongty.jpg" data-aos="flip-left" />
+                        <img class="img-fluid full-width box-shadow-trusochinhcuatongcongty" src="Content/images/trusochinhcuatongcongty.jpg"  />
                         <p class="center-note">TRỤ SỞ CHÍNH</p>
                     </div>
                     <div class="col-sm-4 pos-rel">
-                        <img class="img-fluid full-width box-shadow-phunu" src="Content/images/phunu.png" data-aos="flip-left" />
+                        <img class="img-fluid full-width box-shadow-phunu" src="Content/images/phunu.png"  />
                         <p class="center-note">PHỤ NỮ</p>
                     </div>
                 </div>
@@ -131,46 +131,47 @@
             </div> -->
         </div>
     </div>
-    <div class="row pad-top40px canada-deserve-to-life">
+    <div class="row pad-top40px mar-top60px canada-deserve-to-life">
         <div class="row col-sm-12 canada-deserve-to-life-title">
+            <img src="Content/images/left-bg.jpg" class="img-left-icon" />
             <p>DỊCH VỤ</p>
             &nbsp; NỔI BẬT
         </div>
-        <hr class="hoz-line-fee" />
+        @*<hr class="hoz-line-fee" />*@
         <div class="row col-sm-12 pad-top40px">
             <div class="col-sm-4" data-aos="zoom-in-down">
-                <div class="card float-right card-highlight">
+                <div class="card float-right card-highlight text-right">
                     <img class="card-img-top" src="Content/images/Dichvunoibat1.png" alt="Card image cap">
                     <div class="card-body pos-rel">
                         <div class="card-main-outstanding-title">ĐẦU TƯ TỈNH BANG NEW BRUNKSWICKS</div>
                         <div class="outstanding-form">
                             <hr />
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-address-card-o" aria-hidden="true"></i>Địa điểm
                                 </div>
                                 <div class="col-sm-6">New Brunkswicks</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-address-book" aria-hidden="true"></i>Thường trú nhân
                                 </div>
                                 <div class="col-sm-6">Cho cả gia đình</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-money" aria-hidden="true"></i>Phí dịch vụ
                                 </div>
                                 <div class="col-sm-6">500 - 600 triệu</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-hourglass-o" aria-hidden="true"></i>Thời gian
                                 </div>
                                 <div class="col-sm-6">16 - 18 tháng</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-server" aria-hidden="true"></i>Loại chương trình
                                 </div>
                                 <div class="col-sm-6">Đầu tư</div>
@@ -183,7 +184,7 @@
                 </div>
             </div>
             <div class="col-sm-4" data-aos="zoom-in-down">
-                <div class="card card-highlight">
+                <div class="card card-highlight text-right">
                     <img class="card-img-top" src="Content/images/Dichvunoibat2.png" alt="Card image cap">
                     <div class="card-body pos-rel">
                         <div class="card-main-outstanding-title">
@@ -194,31 +195,31 @@
                         <div class="outstanding-form-violet">
                             <hr />
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-address-card-o" aria-hidden="true"></i>Địa điểm
                                 </div>
                                 <div class="col-sm-6">New Brunkswicks</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-address-book" aria-hidden="true"></i>Thường trú nhân
                                 </div>
                                 <div class="col-sm-6">Cho cả gia đình</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-money" aria-hidden="true"></i>Phí dịch vụ
                                 </div>
                                 <div class="col-sm-6">500 - 600 triệu</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-hourglass-o" aria-hidden="true"></i>Thời gian
                                 </div>
                                 <div class="col-sm-6">16 - 18 tháng</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-server" aria-hidden="true"></i>Loại chương trình
                                 </div>
                                 <div class="col-sm-6">Đầu tư</div>
@@ -232,7 +233,7 @@
                 </div>
             </div>
             <div class="col-sm-4 float-left" data-aos="zoom-in-down">
-                <div class="card card-highlight">
+                <div class="card card-highlight text-right">
                     <img class="card-img-top" src="Content/images/Dichvunoibat3.png" alt="Card image cap">
                     <div class="card-body pos-rel">
                         <div class="card-main-outstanding-title">
@@ -243,31 +244,31 @@
                         <div class="outstanding-form-orrange">
                             <hr />
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-address-card-o" aria-hidden="true"></i>Địa điểm
                                 </div>
                                 <div class="col-sm-6">New Brunkswicks</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-address-book" aria-hidden="true"></i>Thường trú nhân
                                 </div>
                                 <div class="col-sm-6">Cho cả gia đình</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-money" aria-hidden="true"></i>Phí dịch vụ
                                 </div>
                                 <div class="col-sm-6">500 - 600 triệu</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-hourglass-o" aria-hidden="true"></i>Thời gian
                                 </div>
                                 <div class="col-sm-6">16 - 18 tháng</div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 text-left">
                                     <i class="fa fa-server" aria-hidden="true"></i>Loại chương trình
                                 </div>
                                 <div class="col-sm-6">Đầu tư</div>
@@ -285,10 +286,11 @@
 </div>
 <div class="row pad-top40px canada-deserve-to-life document-handling-container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
     <div class="row col-sm-12 canada-deserve-to-life-title">
+        <img src="Content/images/left-bg.jpg" class="img-left-icon" />
         <p>QUY TRÌNH</p>
         &nbsp; XỬ LÝ HỒ SƠ
     </div>
-    <hr class="hoz-line-fee" />
+    @*<hr class="hoz-line-fee" />*@
     <div class="col-sm-12 document-handling">
         <div class="col-sm-12 document-handling-pri-text">
             DỊCH VỤ VIỆC LÀM ĐẦU TƯ ĐỊNH CƯ CANADA
@@ -298,7 +300,7 @@
             hỗ trợ ứng viên trong các thủ tục xin visa và thủ tục PR.
         </div>
         <div class="col-sm-12 document-handling-section-detail">
-            <div class="row mar-bottom30px">
+            <div class="row mar-bottom60px">
                 <div class="col-sm-4 row">
                     <div class="col-sm-3">
                         <i class="fa fa-user-plus" aria-hidden="true"></i>
