--- a/ImmiCanada/Views/Shared/_Layout.cshtml
+++ b/ImmiCanada/Views/Shared/_Layout.cshtml
@@ -24,15 +24,15 @@
     <div class="full-width main-header">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="offset-1 col-sm-2">
                     <img src="Content/images/logo.png" class="img-fluid main-logo" />
                 </div>
-                <div class="col-sm-10 slogan">
+                <div class="col-sm-9 slogan">
                     TẦM NHÌN CỦA BẠN, TƯƠNG LAI GIA ĐÌNH BẠN
                 </div>
             </div>
             <div class="row main-menu">
-                <div class="menu-item"><a href="#">TRANG CHỦ</a></div>
+                <div class="menu-item offset-1"><a href="#">TRANG CHỦ</a></div>
                 <div class="menu-item pos-rel">
                     <a href="#divCanadaDetails" for="divCanadaDetails" data-toggle="collapse"
                        aria-controls="divCanadaDetails" aria-expanded="false" class="collapsed">CANADA</a>
@@ -230,8 +230,8 @@
                 <div class="menu-item"><a href="#">BẢN TIN NHẬP CƯ</a></div>
                 <div class="menu-item"><a href="#">ĐÁNH GIÁ MIỄN PHÍ</a></div>
             </div>
-            <div class="row main-banner">
-                <div class="col-sm-6 pad-left65px">
+            <div class="row main-banner ">
+                <div class="col-sm-6  offset-1">
                     <div class="homepage-title-service">DỊCH VỤ</div>
                     <div class="homepage-title-settle">VIỆC LÀM, ĐẦU TƯ ĐỊNH CƯ</div>
                     <div class="homepage-title-canada">CANADA</div>
