Finish immigration service.

--- a/ImmiCanada/Views/ImmigrationServices/Delete.cshtml
+++ b/ImmiCanada/Views/ImmigrationServices/Delete.cshtml
@@ -1,8 +1,6 @@
 ﻿@model ImmiCanada.Entities.ImmigrationService
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có muốn delete chương trình này?</h3>
 <div>
     <h4>ImmigrationService</h4>
     <hr />
@@ -134,7 +132,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Trở về", "Index")
         </div>
     }
 </div>
