--- a/ImmiCanada/Views/ImmigrationServices/Create.cshtml
+++ b/ImmiCanada/Views/ImmigrationServices/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ImmiCanada.Entities.ImmigrationService
 
-<h2>Create</h2>
+<h2 style="text-align: center ">Thêm mới chương trình</h2>
 
 @using (Html.BeginForm("Create", "ImmigrationServices", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 <div class="container-fluid">
     <div class="form-group mt-3">
-        <input type="submit" value="Create" class="btn btn-default" />
+        <input type="submit" value="Thêm mới" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
     </div>
     <div class="form-group row">
         <div class="col-6">
@@ -72,7 +72,3 @@
     </script>
 </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
