--- a/ImmiCanada/Views/ImmigrationServices/Edit.cshtml
+++ b/ImmiCanada/Views/ImmigrationServices/Edit.cshtml
@@ -46,6 +46,12 @@
             @Html.ValidationMessageFor(model => model.Fee, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group row">
+        <div class="col-6">
+            <label>Nổi bật</label>
+            <input type="checkbox" id="IsOutstanding" name="IsOutstanding" checked="@Model.IsOutstanding" />
+        </div>
+    </div>
     <div class="custom-file">
         @Html.TextBox("Base64Image1", "", new { type = "file" }) <br />
     </div>
